[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/assets/Save.gd" type="Script" id=1]

[node name="Save" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -81.0
margin_top = -48.0
margin_right = 82.0
margin_bottom = -11.0
text = "New Game"

[node name="Load" type="Button" parent="."]
margin_left = -142.0
margin_top = 12.0
margin_right = -56.0
margin_bottom = 55.0
disabled = true
text = "Load"

[node name="Easy" type="Button" parent="."]
margin_left = -42.0
margin_top = 11.0
margin_right = 41.0
margin_bottom = 54.0
text = "Easy"

[node name="Hard" type="Button" parent="."]
margin_left = 56.0
margin_top = 11.0
margin_right = 142.0
margin_bottom = 54.0
text = "Hard"

[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_Hard_pressed"]
